fixed index button not centered

--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,7 @@ margin: 1% 1% 1% 1%;
 
 .pastry-menu-desc .btn{
     font-size: 20px;
-    margin: 1% 1% 1% 15%;
+    /* margin: 1% 1% 1% 15%; */
 }
 
 .pastry-price {
